--- a/printer.cfg
+++ b/printer.cfg
@@ -7,11 +7,15 @@
 [include calibration_macros.cfg]
 [include stealthburner_leds.cfg]
 [include mainsail.cfg]
+[include homing.cfg]
 [virtual_sdcard]
 path: /home/wout/printer_data/gcodes
 on_error_gcode: CANCEL_PRINT
 
 # [include stealthburner_leds.cfg]
+
+[force_move]
+enable_force_move: True
 
 # To use the klipper_z_calibration-extension uncomment the following line
 # Please see https://github.com/protoloft/klipper_z_calibration
@@ -76,7 +80,8 @@ enable_pin: !PF14
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: PG6
+# endstop_pin: PG6 before sensorless
+endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -85,8 +90,8 @@ position_endstop: 300
 position_max: 300
 
 ##--------------------------------------------------------------------
-homing_speed: 25   #Max 100
-homing_retract_dist: 5
+homing_speed: 40   #Max 100
+homing_retract_dist: 0
 homing_positive_dir: true
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -96,6 +101,8 @@ interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
+diag_pin: ^PG6
+driver_SGTHRS: 120
 
 ##  A Stepper - Right
 ##  Connected to MOTOR_1
@@ -107,7 +114,8 @@ enable_pin: !PF15
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: PG9
+# endstop_pin: PG9
+endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_min: 0
 ##--------------------------------------------------------------------
 
@@ -124,8 +132,8 @@ position_max: 300
 #position_max: 350
 
 ##--------------------------------------------------------------------
-homing_speed: 25  #Max 100
-homing_retract_dist: 5
+homing_speed: 40  #Max 100
+homing_retract_dist: 0
 homing_positive_dir: true
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -135,6 +143,8 @@ interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
+diag_pin: ^PG9
+driver_SGTHRS: 105
  
 #####################################################################
 #   Z Stepper Settings
@@ -409,14 +419,14 @@ fan_speed: 0.4
 [idle_timeout]
 timeout: 1800
 
-[safe_z_home]
-##  XY Location of the Z Endstop Switch
-##  Update -10,-10 to the XY coordinates of your endstop pin 
-##  (such as 157,305) after going through Z Endstop Pin
-##  Location Definition step.
-home_xy_position:207,300
-speed:100
-z_hop:10
+# [safe_z_home]
+# ##  XY Location of the Z Endstop Switch
+# ##  Update -10,-10 to the XY coordinates of your endstop pin 
+# ##  (such as 157,305) after going through Z Endstop Pin
+# ##  Location Definition step.
+# home_xy_position:207,300
+# speed:100
+# z_hop:10
 
 
 ##  Use QUAD_GANTRY_LEVEL to level a gantry.
